solved the overflow issue in the output, added more functionalities to buttons and set limits to the window

--- a/src/main.css
+++ b/src/main.css
@@ -22,12 +22,14 @@
 
 .input
 {
-    font-size: 2vh;
+    /* can modify later */
+    font-size: 20px;
 }
 
 .output
 {
-    font-size: 3vh;
+    /* can modify later */
+    font-size: 30px;
     
 }
 
@@ -37,6 +39,6 @@
     height: 7.14vh;
     background-color: #d1d1e0;
     text-align: right;
-    padding-right: 2%;
-    padding-top: 2%;
+    border: 0;
+    outline: 0;
 }
